--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles/index.processed.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo|Playfair+Display|Open+Sans|Montserrat|Roboto" rel="stylesheet">
-    <link href="/style.css" rel="stylesheet">
+    <link href="/Project-Tangerine/style.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
    
   <!-- JUICER -->
@@ -159,7 +159,7 @@
   
   
   <!-- Scripts -->
-  <script src="/script.js" type="text/javascript"></script>
+  <script src="/Project-Tangerine/script.js" type="text/javascript"></script>
   
 </body>
 </html>
